11_Grammars/ANTLR/02c T59v4/gen/GramParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Gram.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class GramParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		I22_invert=1, I24_correct_entry=2, I25_clear=3, I38_sin=4, I39_cos=5, 
		I30_tan=6, I40_indirect=7, I42_store=8, I43_recall=9, I44_sum=10, I61_goto=11, 
		I62_program_indirect=12, I63_exchange_indirect=13, I64_product_indirect=14, 
		I65_multiply=15, I66_pause=16, I67_x_equals_t=17, I67_x_equals_t_indextra=18, 
		I68_nop=19, I72_store_indirect=20, I73_recall_indirect=21, I74_sum_indirect=22, 
		I76_label=23, I77_x_greater_or_equal_than_t=24, I77_x_greater_or_equal_than_t_indextra=25, 
		I82_hir=26, I87_if_flag=27, I97_dsz=28, D1=29, D2=30, A3=31, A4=32, INT=33, 
		WS=34;
	public const int
		RULE_program = 0, RULE_statement = 1, RULE_number_statement = 2, RULE_mnemonic = 3, 
		RULE_atomic_statement = 4, RULE_di_statement = 5, RULE_d_statement = 6, 
		RULE_lai_statement = 7, RULE_doi_lai_statement = 8, RULE_label_statement = 9, 
		RULE_inv_statement = 10;
	public static readonly string[] ruleNames = {
		"program", "statement", "number_statement", "mnemonic", "atomic_statement", 
		"di_statement", "d_statement", "lai_statement", "doi_lai_statement", "label_statement", 
		"inv_statement"
	};

	private static readonly string[] _LiteralNames = {
		null, "'INV'", "'CE'", "'CLR'", "'sin'", "'cos'", "'tan'", "'Ind'", "'STO'", 
		"'RCL'", "'SUM'", "'GTO'", "'PG*'", "'EX*'", "'PD*'", null, null, null, 
		"'EQ*'", "'Nop'", "'ST*'", "'RC*'", "'SM*'", "'Lbl'", null, "'GE*'", "'HIR'", 
		"'IFF'", "'Dsz'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "I22_invert", "I24_correct_entry", "I25_clear", "I38_sin", "I39_cos", 
		"I30_tan", "I40_indirect", "I42_store", "I43_recall", "I44_sum", "I61_goto", 
		"I62_program_indirect", "I63_exchange_indirect", "I64_product_indirect", 
		"I65_multiply", "I66_pause", "I67_x_equals_t", "I67_x_equals_t_indextra", 
		"I68_nop", "I72_store_indirect", "I73_recall_indirect", "I74_sum_indirect", 
		"I76_label", "I77_x_greater_or_equal_than_t", "I77_x_greater_or_equal_than_t_indextra", 
		"I82_hir", "I87_if_flag", "I97_dsz", "D1", "D2", "A3", "A4", "INT", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Gram.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static GramParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public GramParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public GramParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(GramParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 23;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 22;
				statement();
				}
				}
				State = 25;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 17162469246L) != 0) );
			State = 27;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Number_statementContext number_statement() {
			return GetRuleContext<Number_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Atomic_statementContext atomic_statement() {
			return GetRuleContext<Atomic_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Di_statementContext di_statement() {
			return GetRuleContext<Di_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public D_statementContext d_statement() {
			return GetRuleContext<D_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Lai_statementContext lai_statement() {
			return GetRuleContext<Lai_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Doi_lai_statementContext doi_lai_statement() {
			return GetRuleContext<Doi_lai_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Label_statementContext label_statement() {
			return GetRuleContext<Label_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Inv_statementContext inv_statement() {
			return GetRuleContext<Inv_statementContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_statement);
		try {
			State = 37;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 29;
				number_statement();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 30;
				atomic_statement();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 31;
				di_statement();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 32;
				d_statement();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 33;
				lai_statement();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 34;
				doi_lai_statement();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 35;
				label_statement();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 36;
				inv_statement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Number_statementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(GramParser.INT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode D1() { return GetToken(GramParser.D1, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode D2() { return GetToken(GramParser.D2, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode A3() { return GetToken(GramParser.A3, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode A4() { return GetToken(GramParser.A4, 0); }
		public Number_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_number_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.EnterNumber_statement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.ExitNumber_statement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumber_statement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Number_statementContext number_statement() {
		Number_statementContext _localctx = new Number_statementContext(Context, State);
		EnterRule(_localctx, 4, RULE_number_statement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 39;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 16642998272L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MnemonicContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I24_correct_entry() { return GetToken(GramParser.I24_correct_entry, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I25_clear() { return GetToken(GramParser.I25_clear, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I42_store() { return GetToken(GramParser.I42_store, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I43_recall() { return GetToken(GramParser.I43_recall, 0); }
		public MnemonicContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mnemonic; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.EnterMnemonic(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.ExitMnemonic(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMnemonic(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MnemonicContext mnemonic() {
		MnemonicContext _localctx = new MnemonicContext(Context, State);
		EnterRule(_localctx, 6, RULE_mnemonic);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 41;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 780L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Atomic_statementContext : ParserRuleContext {
		public IToken inv;
		public IToken sta;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I38_sin() { return GetToken(GramParser.I38_sin, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I39_cos() { return GetToken(GramParser.I39_cos, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I30_tan() { return GetToken(GramParser.I30_tan, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I22_invert() { return GetToken(GramParser.I22_invert, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I25_clear() { return GetToken(GramParser.I25_clear, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I24_correct_entry() { return GetToken(GramParser.I24_correct_entry, 0); }
		public Atomic_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_atomic_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.EnterAtomic_statement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.ExitAtomic_statement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAtomic_statement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Atomic_statementContext atomic_statement() {
		Atomic_statementContext _localctx = new Atomic_statementContext(Context, State);
		EnterRule(_localctx, 8, RULE_atomic_statement);
		int _la;
		try {
			State = 49;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case I22_invert:
			case I38_sin:
			case I39_cos:
			case I30_tan:
				EnterOuterAlt(_localctx, 1);
				{
				State = 44;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==I22_invert) {
					{
					State = 43;
					_localctx.inv = Match(I22_invert);
					}
				}

				State = 46;
				_localctx.sta = TokenStream.LT(1);
				_la = TokenStream.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 112L) != 0)) ) {
					_localctx.sta = ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				break;
			case I25_clear:
				EnterOuterAlt(_localctx, 2);
				{
				State = 47;
				_localctx.sta = Match(I25_clear);
				}
				break;
			case I24_correct_entry:
				EnterOuterAlt(_localctx, 3);
				{
				State = 48;
				_localctx.sta = Match(I24_correct_entry);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Di_statementContext : ParserRuleContext {
		public IToken sta;
		public IToken ind;
		public IToken t;
		public IToken inv;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I42_store() { return GetToken(GramParser.I42_store, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I43_recall() { return GetToken(GramParser.I43_recall, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode D1() { return GetToken(GramParser.D1, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode D2() { return GetToken(GramParser.D2, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I40_indirect() { return GetToken(GramParser.I40_indirect, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I44_sum() { return GetToken(GramParser.I44_sum, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I22_invert() { return GetToken(GramParser.I22_invert, 0); }
		public Di_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_di_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.EnterDi_statement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.ExitDi_statement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDi_statement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Di_statementContext di_statement() {
		Di_statementContext _localctx = new Di_statementContext(Context, State);
		EnterRule(_localctx, 10, RULE_di_statement);
		int _la;
		try {
			State = 64;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case I42_store:
			case I43_recall:
				EnterOuterAlt(_localctx, 1);
				{
				State = 51;
				_localctx.sta = TokenStream.LT(1);
				_la = TokenStream.LA(1);
				if ( !(_la==I42_store || _la==I43_recall) ) {
					_localctx.sta = ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 53;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==I40_indirect) {
					{
					State = 52;
					_localctx.ind = Match(I40_indirect);
					}
				}

				State = 55;
				_localctx.t = TokenStream.LT(1);
				_la = TokenStream.LA(1);
				if ( !(_la==D1 || _la==D2) ) {
					_localctx.t = ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				break;
			case I22_invert:
			case I44_sum:
				EnterOuterAlt(_localctx, 2);
				{
				State = 57;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==I22_invert) {
					{
					State = 56;
					_localctx.inv = Match(I22_invert);
					}
				}

				State = 59;
				_localctx.sta = Match(I44_sum);
				State = 61;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==I40_indirect) {
					{
					State = 60;
					_localctx.ind = Match(I40_indirect);
					}
				}

				State = 63;
				_localctx.t = TokenStream.LT(1);
				_la = TokenStream.LA(1);
				if ( !(_la==D1 || _la==D2) ) {
					_localctx.t = ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class D_statementContext : ParserRuleContext {
		public IToken sta;
		public IToken t;
		public IToken inv;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I62_program_indirect() { return GetToken(GramParser.I62_program_indirect, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I63_exchange_indirect() { return GetToken(GramParser.I63_exchange_indirect, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I72_store_indirect() { return GetToken(GramParser.I72_store_indirect, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I73_recall_indirect() { return GetToken(GramParser.I73_recall_indirect, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I82_hir() { return GetToken(GramParser.I82_hir, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode D1() { return GetToken(GramParser.D1, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode D2() { return GetToken(GramParser.D2, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I64_product_indirect() { return GetToken(GramParser.I64_product_indirect, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I67_x_equals_t_indextra() { return GetToken(GramParser.I67_x_equals_t_indextra, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I74_sum_indirect() { return GetToken(GramParser.I74_sum_indirect, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I77_x_greater_or_equal_than_t_indextra() { return GetToken(GramParser.I77_x_greater_or_equal_than_t_indextra, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I22_invert() { return GetToken(GramParser.I22_invert, 0); }
		public D_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_d_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.EnterD_statement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.ExitD_statement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitD_statement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public D_statementContext d_statement() {
		D_statementContext _localctx = new D_statementContext(Context, State);
		EnterRule(_localctx, 12, RULE_d_statement);
		int _la;
		try {
			State = 73;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case I62_program_indirect:
			case I63_exchange_indirect:
			case I72_store_indirect:
			case I73_recall_indirect:
			case I82_hir:
				EnterOuterAlt(_localctx, 1);
				{
				State = 66;
				_localctx.sta = TokenStream.LT(1);
				_la = TokenStream.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 70266880L) != 0)) ) {
					_localctx.sta = ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 67;
				_localctx.t = TokenStream.LT(1);
				_la = TokenStream.LA(1);
				if ( !(_la==D1 || _la==D2) ) {
					_localctx.t = ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				break;
			case I22_invert:
			case I64_product_indirect:
			case I67_x_equals_t_indextra:
			case I74_sum_indirect:
			case I77_x_greater_or_equal_than_t_indextra:
				EnterOuterAlt(_localctx, 2);
				{
				State = 69;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==I22_invert) {
					{
					State = 68;
					_localctx.inv = Match(I22_invert);
					}
				}

				State = 71;
				_localctx.sta = TokenStream.LT(1);
				_la = TokenStream.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 38027264L) != 0)) ) {
					_localctx.sta = ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 72;
				_localctx.t = TokenStream.LT(1);
				_la = TokenStream.LA(1);
				if ( !(_la==D1 || _la==D2) ) {
					_localctx.t = ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Lai_statementContext : ParserRuleContext {
		public IToken sta;
		public IToken t;
		public IToken inv;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I61_goto() { return GetToken(GramParser.I61_goto, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public MnemonicContext mnemonic() {
			return GetRuleContext<MnemonicContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode D2() { return GetToken(GramParser.D2, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode A3() { return GetToken(GramParser.A3, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode A4() { return GetToken(GramParser.A4, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I40_indirect() { return GetToken(GramParser.I40_indirect, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode D1() { return GetToken(GramParser.D1, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I67_x_equals_t() { return GetToken(GramParser.I67_x_equals_t, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I22_invert() { return GetToken(GramParser.I22_invert, 0); }
		public Lai_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lai_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.EnterLai_statement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.ExitLai_statement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLai_statement(this);
			else return visitor.VisitChildren(this);
		}
	}
